Support Not Found Freelancer and simplify tests to rely on ResponseSpec
